EATON-95 - Link List 2 columns variation

--- a/eaton.frontend/src/components/link-list/css/link-list.scss
+++ b/eaton.frontend/src/components/link-list/css/link-list.scss
@@ -11,3 +11,4 @@
 @import "views/view-primary-nav";
 @import 'views/view-download-list';
 @import 'views/view-section-navigation';
+@import 'views/view-2column';
