[M60] Fix sightly comparison issue

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
@@ -13,7 +13,7 @@
               <div class="search-results-simple__sort-options">${ 'Sort by' @ i18n }</div>
             </div>
 
-            <div data-sly-test="${ data.results.activeFilters.length > 0 }"
+            <div data-sly-test="${ data.results.activeFilters.length }"
               class="search-results-simple__header-bottom">
 
               <div data-sly-list.filter="${ data.results.activeFilters }"
