--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
@@ -1,19 +1,15 @@
-<sly data-sly-use.data="${'../data/view-no-image-highlights-data.js' @testdata=properties.testdata}">
-
-  <div class="icon-list-no-image-highlights">
-    <div class="container">
-      <div class="row">
-          <!--/* Icon List */-->
-          <div class="icon-list-no-image-highlights__wrapper" data-sly-list.iconItem="${ data.items }">
-            <div class="col-xs-12 col-md-4 ${iconItem.first ? 'test' : ''} icon-list-no-image-highlights__item">
-              <div class="icon-list-no-image-highlights__content">
-                <!--/* Post integration - to be mapped with ${iconItem.text} */-->
-                <div class="icon-list-no-image-highlights__title">${iconItem.title}</div>
-                <div class="icon-list-no-image-highlights__text">${iconItem.tcsText @context = 'html'}</div>
-              </div>
+<div class="feature-block-component" data-sly-use.data="../data/view-product-features-data.js">
+    <div class="row feature-block-component__container">
+        <div class="col-xs-12 col-sm-7 feature-block-component__copy" style="background-color: ${data.backgroundColor @ context='styleString'}">
+            <div class="feature-block-component__text">
+                <h2>${data.title}</h2>
+                <p class="feature-block-component__description">${data.text @ context = 'html'}</p>
+                <a href="${data.link.url}" aria-label="Go to ${data.link.text}" class="b-h4-link">${data.link.text}</a>
+                <a class="b-button b-button__primary b-button__primary--light feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
             </div>
-          </div>
-      </div>
+        </div>
+        <div class="col-xs-12 col-sm-5 feature-block-component__image"
+             style="background:url('${data.imgSrc @ context='styleString'}') center no-repeat; background-size: cover">
+        </div>
     </div>
-  </div>
-</sly>
+</div>
