--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -162,6 +162,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-h4-link { font-size: 1.375em; color: #005EB8; }
 
+.b-h4-link:hover, .b-h4-link:focus, .b-h4-link:active { text-decoration: none; color: #005EB8; }
+
 @media screen and (min-width: 992px) { .b-h4-link { font-size: 1.625em; } }
 
 .u-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
