--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -59,6 +59,8 @@
         flex-wrap: wrap;
         .row {
           margin: 0;
+          display: flex;
+          flex-wrap: wrap;
         }
       }
     }
