--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -61,6 +61,6 @@
   .eaton-top-list-with-icon__element { margin-bottom: 90px; }
   .eaton-top-list-with-icon .container { margin: 0 auto; }
   .eaton-top-list-with-icon .container.row { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
-  .eaton-top-list-with-icon .container.row .row { margin: 0; } }
+  .eaton-top-list-with-icon .container.row .row { margin: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; } }
 
 .icon-list { padding: 30px 0; }
