--- a/eaton.frontend/src/components/product-tabs-family/css/product-tabs-family.scss
+++ b/eaton.frontend/src/components/product-tabs-family/css/product-tabs-family.scss
@@ -13,6 +13,10 @@
       ~ .row {
         label[for="#{$radioId}"] {
           background-color: $color__secondary-gray2;
+
+          .dark-theme & {
+            background-color: $color__primary-gray2;
+          }
         }
 
         div[data-tab-name="#{$radioId}"] {
@@ -26,6 +30,50 @@
 .eaton-product-tabs {
   background-color: $color__secondary-gray3;
 
+  .dark-theme & {
+    background-color: $color__primary-gray1;
+
+    label {
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: $color__primary-gray2;
+      }
+
+      .icon,
+      span {
+        color: $color__white;
+      }
+    }
+
+    &__description {
+      .b-eyebrow-small,
+      .icon,
+      .b-heading-h5 {
+        color: $color__white;
+      }
+    }
+
+  }
+
+  &__description {
+    padding: 10px 0;
+
+    .b-eyebrow-small {
+      color: $color__primary-blue;
+      font-weight: bold;
+    }
+
+    .icon {
+      font-size: 1.1rem;
+      font-weight: bold;
+    }
+
+    .b-heading-h5 {
+      padding-top: 6px;
+    }
+  }
+
   &__tab-panel {
     display: none;
   }
@@ -35,7 +83,7 @@
     width: 33.333%;
     text-align: center;
     float: left;
-    padding: 40px 0;
+    padding: 4rem 0;
 
     a {
       display: block;
@@ -71,10 +119,10 @@
 
   &__dropdown {
     background-color: $color__green;
-    border: none;
+    border: 0;
     color: $color__white;
     display: inline-block;
-    font-family: Arial; // TODO: replace
+    font-family: $font-family__primary;
     font-size: 1.8rem;
     font-weight: bold;
     height: 57px;
@@ -107,29 +155,29 @@
       ul {
         list-style: none;
         padding: $spacing__sm;
+      }
 
-        li {
-          padding: $spacing__sm 0 0 0;
+      li {
+        padding: $spacing__sm 0 0 0;
 
-          &:first-child {
-            padding: 0;
-          }
+        &:first-child {
+          padding: 0;
+        }
 
-          a {
-            color: $color__primary-gray2;
-            display: inline-block;
-            width: 100%;
-            text-align: left;
-          }
+        a {
+          color: $color__primary-gray2;
+          display: inline-block;
+          width: 100%;
+          text-align: left;
+        }
 
-          span {
-            font-size: 1.5rem;
-          }
+        span {
+          font-size: 1.5rem;
+        }
 
-          .icon {
-            padding: 0 10px 0 0;
-            font-size: 25px;
-          }
+        .icon {
+          padding: 0 10px 0 0;
+          font-size: 25px;
         }
       }
     }
@@ -140,9 +188,11 @@
   @include product-tab('specifications');
   @include product-tab('resources');
 
-
-
   @include media-mobile-only {
+    &__description {
+      padding: 10px 15px;
+    }
+
     .container {
       padding: 0;
     }
@@ -154,11 +204,26 @@
     }
 
     label {
-      padding: 20px 0;
+      padding: 1.3rem 0;
+
+      .icon {
+        font-size: 2.4rem;
+      }
+
+      span {
+        font-size: 1.2rem;
+      }
     }
   }
 
   @include media-desktop-and-up {
+    &__description {
+      margin-top: 25%;
+      transform: translateY(-50%);
 
+      .icon {
+        font-size: 1.4rem;
+      }
+    }
   }
 }
