--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
@@ -8,7 +8,7 @@
             <div class="col-xs-12 col-md-4 ${iconItem.first ? 'test' : ''} icon-list-no-image-highlights__item">
               <div class="icon-list-no-image-highlights__content">
                 <!--/* Post integration - to be mapped with ${iconItem.text} */-->
-                <div class="icon-list-no-image-highlights__title">${iconItem.title}</div>
+                <div class="icon-list-no-image-highlights__title b-eyebrow-small">${iconItem.title}</div>
                 <div class="icon-list-no-image-highlights__text">${iconItem.tcsText @context = 'html'}</div>
               </div>
             </div>
