--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-tabs-family/css/product-tabs-family.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-tabs-family/css/product-tabs-family.css
@@ -40,15 +40,15 @@
 
 .eaton-product-tabs__dropdown__content ul { list-style: none; padding: 30px; }
 
-.eaton-product-tabs__dropdown__content li { padding: 30px 0 0 0; }
+.eaton-product-tabs__dropdown__content li { padding: 30px 0 0 35px; position: relative; }
 
-.eaton-product-tabs__dropdown__content li:first-child { padding: 0; }
+.eaton-product-tabs__dropdown__content li:first-child { padding-top: 0; }
 
 .eaton-product-tabs__dropdown__content li a { color: #5B6770; display: inline-block; width: 100%; text-align: left; }
 
 .eaton-product-tabs__dropdown__content li span { font-size: 1.5rem; }
 
-.eaton-product-tabs__dropdown__content li .icon { padding: 0 10px 0 0; font-size: 25px; }
+.eaton-product-tabs__dropdown__content li .icon { font-size: 25px; left: 0; padding: 0 10px 0 0; position: absolute; }
 
 .eaton-product-tabs input[id="overview"] { display: none; }
 
