fix styling issues to product features

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -3,7 +3,18 @@
   padding: 60px 0;
 
   &__container {
-    height: 600px;
+
+    &--blue {
+      height: 600px;
+    }
+
+    &--white {
+      height: 500px;
+
+      @include media-mobile-only {
+        height: 730px;
+      }
+    }
   }
 
   &__copy {
@@ -28,13 +39,27 @@
     line-height: 1.5;
     padding-top: 30px;
 
-    & p {
+    p {
       padding-bottom: 15px;
     }
   }
 
   &__image {
     height: 100%;
+
+    &--center {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+
+      @include media-mobile-only {
+        margin-bottom: 120px;
+      }
+
+      @include media-tablet-and-up {
+        align-items: center;
+      }
+    }
   }
 
   &__cta {
@@ -50,7 +75,6 @@
 
     &__text {
       padding: 30px;
-      min-height: 380px;
     }
 
     &__copy {
