--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
@@ -1,15 +1,15 @@
 <div class="feature-block-component" data-sly-use.data="../data/view-product-features-data.js">
-    <div class="row feature-block-component__container">
+    <div class="row feature-block-component__container feature-block-component__container--white">
         <div class="col-xs-12 col-sm-7 feature-block-component__copy" style="background-color: ${data.backgroundColor @ context='styleString'}">
             <div class="feature-block-component__text">
                 <h2>${data.title}</h2>
-                <p class="feature-block-component__description">${data.text @ context = 'html'}</p>
-                <a href="${data.link.url}" aria-label="Go to ${data.link.text}" class="b-h4-link">${data.link.text}</a>
+                <div class="feature-block-component__description">${data.text @ context = 'html'}</div>
+                <a href="${data.link.url}" aria-label="Go to ${data.link.text}" class="b-h4-link">${data.link.text @ context = 'html'}</a>
                 <a class="b-button b-button__primary b-button__primary--light feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-5 feature-block-component__image"
-             style="background:url('${data.imgSrc @ context='styleString'}') center no-repeat; background-size: cover">
+        <div class="col-xs-12 col-sm-5 feature-block-component__image feature-block-component__image--center">
+            <img class="img-responsive" src="${data.imgSrc}" alt="${data.imgAlt}">
         </div>
     </div>
 </div>
