--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -17,7 +17,7 @@
   @include media-mobile-and-tablet {
     position: fixed;
     top: 60px;
-    bottom: 40px;
+    bottom: 0;
     width: 100%;
     left: 0;
     height: 0;
@@ -26,6 +26,7 @@
     background: $color__primary-gray2;
     color: $color__white;
     transition: all 0.7s ease-in-out;
+    margin-bottom: 80px;
 
     &__headline {
       display: block;
@@ -51,7 +52,7 @@
         padding: $spacing__sm 0;
         color: $color__white;
         cursor: pointer;
-        border-bottom: 1px solid $color__secondary-gray2;
+        border-bottom: 1px solid $color__secondary-gray5;
         font-size: 20px;
 
         &:first-child { margin-top: 0; }
@@ -60,11 +61,9 @@
     }
 
     &--has-background {
-      .eaton-link-list-primary-nav__items {
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-      }
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
     }
   }
 
@@ -123,9 +122,7 @@
     }
 
     &--has-background {
-      .eaton-link-list-primary-nav__items {
-        background: none !important;
-      }
+      background: none !important;
     }
   }
 }
