--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-primary-nav.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-primary-nav.html
@@ -1,5 +1,5 @@
 <template data-sly-template.primaryNavigation="${ @ data }">
-    <div class="eaton-link-list-primary-nav ${data.backgroundImage ? 'eaton-link-list-primary-nav--has-background' : ''} ">
+    <div class="eaton-link-list-primary-nav ${data.backgroundImage ? 'eaton-link-list-primary-nav--has-background' : ''}"  style="background-image: url('${data.backgroundImage @ context = 'uri'}')">
       <!--/* Headline: Visible only for Mobile Breakpoints */-->
       <div data-sly-test="${data.headline}" class="eaton-link-list-primary-nav__headline">
         <div class="eaton-link-list-primary-nav__container container">
@@ -9,7 +9,7 @@
 
       <!--/* List Links */-->
       <div class="eaton-link-list-primary-nav__container container">
-        <nav data-sly-list.level1="${data.links}" class="eaton-link-list-primary-nav__items" style="background-image: url('${data.backgroundImage @ context = 'uri'}')">
+        <nav data-sly-list.level1="${data.links}" class="eaton-link-list-primary-nav__items">
             <a href="#" data-menu-category="${level1.menuCategory}" aria-expanded="false">${ level1.title }</a>
         </nav>
       </div>
