--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -32,13 +32,13 @@
 
 .eaton-link-list-primary-nav__items a { text-decoration: none; }
 
-@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 60px; bottom: 40px; width: 100%; left: 0; height: 0; visibility: hidden; overflow: hidden; background: #5B6770; color: #FFF; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out; }
+@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 60px; bottom: 0; width: 100%; left: 0; height: 0; visibility: hidden; overflow: hidden; background: #5B6770; color: #FFF; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out; margin-bottom: 80px; }
   .eaton-link-list-primary-nav__headline { display: block; padding: 30px 0; font-size: 25px; line-height: 30px; background: #333F48; margin-bottom: 0; font-family: 'EatonMedium'; }
   .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 0; font-family: Arial; min-height: 600px; }
   .eaton-link-list-primary-nav__items a { display: block; padding: 30px 0; color: #FFF; cursor: pointer; border-bottom: 1px solid #EEF0F2; font-size: 20px; }
   .eaton-link-list-primary-nav__items a:first-child { margin-top: 0; }
   .eaton-link-list-primary-nav__items a:last-child { border-bottom: 0; }
-  .eaton-link-list-primary-nav--has-background .eaton-link-list-primary-nav__items { background-repeat: no-repeat; background-position: center center; background-size: cover; } }
+  .eaton-link-list-primary-nav--has-background { background-repeat: no-repeat; background-position: center center; background-size: cover; } }
 
 @media screen and (min-width: 992px) { .eaton-link-list-primary-nav { position: relative; height: 100%; }
   .eaton-header .eaton-link-list-primary-nav { margin-right: 15px; }
@@ -48,7 +48,7 @@
   .eaton-link-list-primary-nav__items a { margin: 0 15px; padding-right: 5px; padding-left: 5px; color: #333F48; display: -webkit-box; display: -ms-flexbox; display: flex; height: 100%; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 20px; position: relative; }
   .eaton-link-list-primary-nav__items a.active::after { content: ''; position: absolute; height: 4px; bottom: -4px; left: 5px; right: 5px; width: 90%; background: #005EB8; }
   .eaton-header--fixed .eaton-link-list-primary-nav__items { height: 80px; }
-  .eaton-link-list-primary-nav--has-background .eaton-link-list-primary-nav__items { background: none !important; } }
+  .eaton-link-list-primary-nav--has-background { background: none !important; } }
 
 .eaton-download-list__links { padding: 0; margin: 0; list-style-type: none; }
 
