change data to product features

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -45,6 +45,8 @@
 
 .feature-block-component__copy--white-text { color: #FFF; }
 
+.feature-block-component__link { display: block; }
+
 .feature-block-component__text { padding-left: 120px; padding-right: 40px; }
 
 .feature-block-component__description { font-family: "Eaton", Arial, sans-serif; font-size: 1.125em; line-height: 1.5; padding-top: 30px; }
