--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -160,7 +160,7 @@ h5, .b-heading-h5 { margin-top: 0; }
 
 h5 a, .b-heading-h5 a { color: #005EB8; }
 
-.b-h4-link { font-size: 1.375em; color: #005EB8; }
+.b-h4-link { font-size: 1.375em; color: #005EB8; font-weight: bold; }
 
 .b-h4-link:hover, .b-h4-link:focus, .b-h4-link:active { text-decoration: none; color: #005EB8; }
 
