--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -12,7 +12,7 @@
       height: 500px;
 
       @include media-mobile-only {
-        height: 730px;
+        height: 750px;
       }
     }
   }
@@ -54,7 +54,7 @@
     &--center {
       display: flex;
       justify-content: center;
-      align-items: flex-end;
+      align-items: flex-start;
 
       @include media-mobile-only {
         margin-bottom: 120px;
