--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -39,7 +39,7 @@
 
 .feature-block-component__container--white { height: 500px; }
 
-@media screen and (max-width: 767px) { .feature-block-component__container--white { height: 730px; } }
+@media screen and (max-width: 767px) { .feature-block-component__container--white { height: 750px; } }
 
 .feature-block-component__copy { height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
@@ -55,7 +55,7 @@
 
 .feature-block-component__image { height: 100%; }
 
-.feature-block-component__image--center { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; }
+.feature-block-component__image--center { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; }
 
 @media screen and (max-width: 767px) { .feature-block-component__image--center { margin-bottom: 120px; } }
 
