Replace SASS typography placeholders with SASS Mixins due to sass restrictions when placeholders are used within @media-quieres

--- a/eaton.frontend/src/components/footer/css/footer.scss
+++ b/eaton.frontend/src/components/footer/css/footer.scss
@@ -18,7 +18,7 @@
   padding: 60px 0;
 
   .eaton-text-default__content {
-    @extend %body-copy-small;
+    @include body-copy-small;
 
     // override the default font size for /text component
     p {
