--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -4,7 +4,7 @@
 
 .rich-text-container {
 
-  @extend %body-copy;
+  @include body-copy;
 
   // stylelint-disable selector-max-compound-selectors
   b,
@@ -22,7 +22,7 @@
   }
 
   p {
-    @extend %body-copy;
+    @include body-copy;
   }
 
 
