--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -6,7 +6,7 @@
 
 .eaton-footer-top .eaton-text-default__content a:active { font-weight: bold; }
 
-@media screen and (min-width: 992px) { .eaton-footer-top .eaton-text-default__content { font-size: 18px; line-height: 24px; } }
+@media screen and (min-width: 992px) { .eaton-footer-top .eaton-text-default__content { font-family: Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; } }
 
 .eaton-footer-top .eaton-text-default__content p { font-size: 1.7rem; line-height: 2.8rem; }
 
