--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-simple.html
@@ -106,7 +106,9 @@
             </div>
 
             <div class="results-list__bottom text-center">
-              <a href="#" class="b-button b-button__primary b-button__primary--light" role="button">${ 'Load More' @ i18n }</a>
+              <div class="results-list__actions text-center">
+                <button class="b-button b-button__primary b-button__primary--light" role="button">${ 'Load More' @ i18n }</button>
+              </div>
             </div>
           </div>
 
